--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Kinh Ăn Năn Tội</h1>
+<p>Lạy Chúa con, Chúa là Đấng trọn tốt trọn lành vô cùng. Chúa đã dựng nên con, và cho Con Chúa ra đời chịu nạn chịu chết vì con, mà con đã cả lòng phản nghịch lỗi nghĩa cùng Chúa, thì con lo buồn đau đớn, cùng chê ghét mọi tội con trên hết mọi sự; con dốc lòng chừa cải, và nhờ ơn Chúa thì con sẽ lánh xa dịp tội cùng làm việc đền tội cho xứng.</p>
+<p>Amen</p>
+
+<p>Kinh Cáo Mình</p>
+<p>Tôi thú nhận cùng Thiên Chúa toàn năng và cùng anh chị em. Tôi đã phạm tội nhiều trong tư tuởng, lời nói, việc làm và những điều thiếu sót:</p>
+<p>lỗi tại tôi, lỗi tại tôi, lỗi tại tôi mọi đàng.</p>
+<p>Vì vậy tôi xin Đức Bà Maria trọn đời đồng trinh, các thiên thần, các thánh và anh chị em, khẩn cầu cho tôi trước tòa Thiên Chúa, Chúa chúng ta.</p>
+<p>Amen.</p>
 
 </body>
 </html>
