--- a/index.html
+++ b/index.html
@@ -8,12 +8,27 @@
 <h1>Kinh Ăn Năn Tội</h1>
 <p>Lạy Chúa con, Chúa là Đấng trọn tốt trọn lành vô cùng. Chúa đã dựng nên con, và cho Con Chúa ra đời chịu nạn chịu chết vì con, mà con đã cả lòng phản nghịch lỗi nghĩa cùng Chúa, thì con lo buồn đau đớn, cùng chê ghét mọi tội con trên hết mọi sự; con dốc lòng chừa cải, và nhờ ơn Chúa thì con sẽ lánh xa dịp tội cùng làm việc đền tội cho xứng.</p>
 <p>Amen</p>
+<hr/>
 
-<p>Kinh Cáo Mình</p>
+<h1>Kinh Cáo Mình</h1>
 <p>Tôi thú nhận cùng Thiên Chúa toàn năng và cùng anh chị em. Tôi đã phạm tội nhiều trong tư tuởng, lời nói, việc làm và những điều thiếu sót:</p>
 <p>lỗi tại tôi, lỗi tại tôi, lỗi tại tôi mọi đàng.</p>
 <p>Vì vậy tôi xin Đức Bà Maria trọn đời đồng trinh, các thiên thần, các thánh và anh chị em, khẩn cầu cho tôi trước tòa Thiên Chúa, Chúa chúng ta.</p>
 <p>Amen.</p>
+<hr/>
+
+<h1>Kinh Tin Kính (Các Thánh Tông Đồ)</h1>
+<p>Tôi tin kính Đức Chúa Trời, là Cha phép tắc vô cùng dựng nên trời đất.</p>
+<p>Tôi tin kính Đức Chúa Giêsu Kitô là Con Một Đức Chúa Cha, cùng là Chúa chúng tôi, bởi phép Đức Chúa Thánh Thần mà Người xuống thai sinh bởi Bà Maria Đồng Trinh, chịu nạn đời quan Phongxiô Philatô, chịu đóng đanh trên cây Thánh giá, chết và táng xác, xuống ngục tổ tông, ngày thứ ba bởi trong kẻ chết mà sống lại, lên trời ngự bên hữu Đức Chúa Cha phép tắc vô cùng, ngày sau bởi trời lại xuống phán xét kẻ sống và kẻ chết.</p>
+<p>Tôi tin kính Đức Chúa Thánh Thần. Tôi tin có Hội Thánh hằng có ở khắp thế này, các thánh thông công. Tôi tin phép tha tội. Tôi tin xác loài người ngày sau sống lại. Tôi tin hằng sống vậy.</p>
+<p>Amen</p>
+<hr/>
+
+<h1>Kinh Cầu Nguyện Xin Chúa Chữa Lành</h1>
+<p>Chúc tụng Thiên Chúa là Đấng tạo thành trời đất, là Vua muôn loài, là Đấng Cứu Độ con. Lạy Chúa Giêsu, Chúa mời gọi những ai gồng gánh nặng nề, hãy đến với Chúa, Chúa sẽ bổ sức cho.</p>
+<p>Giờ đây, con dâng lên Chúa thân xác bệnh tật, yếu đuối, bất lực của con, xin Chúa nâng con lên, ôm con vào lòng và cho con tựa đầu vào trái tim của Chúa. Xin Máu và Nước Cứu Độ của Chúa bao phủ lấy con, rửa sạch tất cả những tội lỗi và các thương tích nơi thân xác của con. Xin đôi bàn tay chữa lành của Chúa chạm đến những nơi thương tích, bệnh tật của con, hầu con sẽ được lành mạnh.</p>
+<p>Cậy nhờ các roi đòn của Chúa đã chịu vì tội lỗi của con, cho con thêm sức mạnh để có thể chịu đựng những đau đớn cho nên. Xin Ánh Sáng Phục Sinh của Chúa, chiếu soi vào những nơi tối tăm, chết chóc trong con người của con, để con được hồi sinh cả về thể xác và tinh thần. Cám ơn Chúa Giêsu là Đấng Cứu Độ con.</p>
+<p>Amen</p>
 
 </body>
 </html>
