--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <title>Kinh Tối</title>
+<style>
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+</style>
 </head>
 <body>
 
