--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 <p>Tôi tin kính Đức Chúa Thánh Thần. Tôi tin có Hội Thánh hằng có ở khắp thế này, các thánh thông công. Tôi tin phép tha tội. Tôi tin xác loài người ngày sau sống lại. Tôi tin hằng sống vậy.</p>
 <p>Amen</p>
 <hr/>
+  
+<h1>Kinh Thánh Cêcilia</h1>
+<p>Lạy ơn bà thánh Cêcilia, vị tử đạo. Bà được Chúa thương yêu, bà không chịu khuất phục trước mọi sức mạnh trần thế. Bà tin tưởng Thiên Chúa còn hơn được lợi lộc thế gian. Bà không dâng hương tế thần ngoại, mà còn mạnh mẽ tuyên xưng danh Chúa Kitô, khiến nhiều người trở về với Thiên Chúa. Chúa đã yêu thương bà và cho bà được phúc tử vì đạo.</p>
+<p>Lạy thánh nữ Cêcilia, xin bà cầu thay nguyện giúp cho chúng con, để chúng con được mạnh mẽ, can đảm làm chứng cho Chúa, để ngày sau được về hưởng vinh phúc trên Thiên Đàng. Amen.</p>
+<hr/>
 
 <h1>Kinh Cầu Nguyện Xin Chúa Chữa Lành</h1>
 <p>Chúc tụng Thiên Chúa là Đấng tạo thành trời đất, là Vua muôn loài, là Đấng Cứu Độ con. Lạy Chúa Giêsu, Chúa mời gọi những ai gồng gánh nặng nề, hãy đến với Chúa, Chúa sẽ bổ sức cho.</p>
