--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <p>Amen.</p>
 <hr/>
 
+<h1>Kinh Kính Thánh Martin De Porres</h1>
+<p>Lạy Thánh Martino rất khiêm nhường, lòng thương yêu nồng nhiệt của Người chẳng những che chở các anh em túng nghèo, mà lại cả những thú vật ngoài đồng. Thật là gương huy hoàng của đức bác ái. Chúng con kính mừng và cầu khấn Người.</p>
+<p>Từ tòa cao Người ngự, xin đoái thương nhậm lời anh em túng nghèo kêu xin, để chúng con được bắt chước nhân đức Người, mà yên vui trong địa vị Chúa đã đặt, và được mạnh mẽ, can đảm vác Thánh Giá theo chân Chúa Cứu Thế và Mẹ Sầu Bi. Sau hết được về nước Thiên Ðàng. Vì công nghiệp Chúa Giêsu Kitô là Chúa chúng con. Amen.</p>
+<hr/>
+  
 <h1>Kinh Ăn Năn Tội</h1>
 <p>Lạy Chúa con, Chúa là Đấng trọn tốt trọn lành vô cùng. Chúa đã dựng nên con, và cho Con Chúa ra đời chịu nạn chịu chết vì con, mà con đã cả lòng phản nghịch lỗi nghĩa cùng Chúa, thì con lo buồn đau đớn, cùng chê ghét mọi tội con trên hết mọi sự; con dốc lòng chừa cải, và nhờ ơn Chúa thì con sẽ lánh xa dịp tội cùng làm việc đền tội cho xứng.</p>
 <p>Amen</p>
@@ -34,7 +39,7 @@
   
 <h1>Kinh Thánh Cêcilia</h1>
 <p>Lạy ơn bà thánh Cêcilia, vị tử đạo. Bà được Chúa thương yêu, bà không chịu khuất phục trước mọi sức mạnh trần thế. Bà tin tưởng Thiên Chúa còn hơn được lợi lộc thế gian. Bà không dâng hương tế thần ngoại, mà còn mạnh mẽ tuyên xưng danh Chúa Kitô, khiến nhiều người trở về với Thiên Chúa. Chúa đã yêu thương bà và cho bà được phúc tử vì đạo.</p>
-<p>Lạy thánh nữ Cêcilia, xin bà cầu thay nguyện giúp cho chúng con, để chúng con được mạnh mẽ, can đảm làm chứng cho Chúa, để ngày sau được về hưởng vinh phúc trên Thiên Đàng. Amen.</p>
+<p>Lạy thánh nữ Cêcilia, xin bà cầu thay nguyện giúp cho chúng con, để chúng con được mạnh mẽ, can đảm làm chứng cho Chúa, để ngày sau được về hưởng vinh phúc trên Thiên Đàng. Vì công nghiệp Chúa Giêsu Kitô là Chúa chúng con. Amen.</p>
 <hr/>
 
 <h1>Kinh Cầu Nguyện Xin Chúa Chữa Lành</h1>
