--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   
 <h1>Kinh Thánh Cêcilia</h1>
 <p>Lạy ơn bà thánh Cêcilia, vị tử đạo. Bà được Chúa thương yêu, bà không chịu khuất phục trước mọi sức mạnh trần thế. Bà tin tưởng Thiên Chúa còn hơn được lợi lộc thế gian. Bà không dâng hương tế thần ngoại, mà còn mạnh mẽ tuyên xưng danh Chúa Kitô, khiến nhiều người trở về với Thiên Chúa. Chúa đã yêu thương bà và cho bà được phúc tử vì đạo.</p>
-<p>Lạy thánh nữ Cêcilia, xin bà cầu thay nguyện giúp cho chúng con, để chúng con được mạnh mẽ, can đảm làm chứng cho Chúa, để ngày sau được về hưởng vinh phúc trên Thiên Đàng. Vì công nghiệp Chúa Giêsu Kitô là Chúa chúng con. Amen.</p>
+<p>Lạy thánh nữ Cêcilia, xin bà cầu thay nguyện giúp cho chúng con, để chúng con được mạnh mẽ, can đảm làm chứng cho Chúa khi còn sống ở đời này, để ngày sau được về hưởng vinh phúc trong Chúa trên nước Thiên Đàng. Vì công nghiệp Chúa Giêsu Kitô là Chúa chúng con. Amen.</p>
 <hr/>
 
 <h1>Kinh Cầu Nguyện Xin Chúa Chữa Lành</h1>
